# QDash

./: .gitignore  .qmlformat.ini  CMakeLists.txt  README.md  cpmfile.json  icons.qrc  main.cpp
QDash/: .clang-format  CMakeLists.txt
QDash/Backend/: CMakeLists.txt
QDash/Backend/BuildConfig/: BuildConfig.cpp.in  BuildConfig.h  CMakeLists.txt
QDash/Backend/Helpers/: CMakeLists.txt  CompileDefinitions.h  FileSelect.h  NotificationHelper.cpp  NotificationHelper.h  PlatformHelper.cpp  PlatformHelper.h
QDash/Backend/Models/: CMakeLists.txt  GenericMapModel.cpp  GenericMapModel.h  RemoteLayoutModel.cpp  RemoteLayoutModel.h  TabListModel.cpp  TabListModel.h  TabWidgetsModel.cpp  TabWidgetsModel.h  TopicListModel.cpp  TopicListModel.h
QDash/Backend/Services/: CMakeLists.txt  ConnManager.cpp  ConnManager.h  Logger.cpp  Logger.h  SettingsManager.cpp  SettingsManager.h  TopicStore.cpp  TopicStore.h
QDash/Components/: CMakeLists.txt  MainScreen.qml  SearchableComboBox.qml  Tab.qml  TopicView.qml  WidgetDelegate.qml
QDash/Config/: BaseConfigDialog.qml  CMakeLists.txt  ColorField.qml  LabeledCheckbox.qml  LabeledComboBox.qml  LabeledDoubleSpinBox.qml  LabeledIndexComboBox.qml  LabeledSpinBox.qml  LabeledTextField.qml  SectionHeader.qml  TitleComponent.qml
QDash/Constants/: CMakeLists.txt  Constants.qml
QDash/Controls/: BaseConfigDialog.qml  CMakeLists.txt  ColorField.qml  LabeledCheckbox.qml  LabeledComboBox.qml  LabeledDoubleSpinBox.qml  LabeledIndexComboBox.qml  LabeledSpinBox.qml  LabeledTextField.qml  SectionHeader.qml
QDash/Core/: AcceleratedShape.qml  CMakeLists.txt  DoubleSpinBox.qml  IconButton.qml  RadialGauge.qml  Util.qml
QDash/Dialogs/: AboutDialog.qml  AnimatedDialog.qml  CMakeLists.txt  NativeDialog.qml  NotificationPopup.qml  StyleWarnDialog.qml  TextDialog.qml
QDash/Dialogs/accent/: AccentDisplay.qml  AccentEditor.qml
QDash/Dialogs/remote/: RemoteLayout.qml  RemoteLayoutsDialog.qml
QDash/Dialogs/settings/: AppearanceComboBox.qml  AppearanceTab.qml  MiscTab.qml  ServerTab.qml  SettingsDialog.qml  SettingsTabButton.qml  WindowTab.qml
QDash/Dialogs/tab/: TabCloseDialog.qml  TabDialog.qml  TabNameDialog.qml
QDash/Fields/: BetterComboBox.qml  BetterDoubleSpinBox.qml  BetterMenuItem.qml  BetterSpinBox.qml  BetterTextField.qml  CMakeLists.txt  FieldFooter.qml  SearchableComboBox.qml
QDash/Items/: AcceleratedShape.qml  BetterMenu.qml  CMakeLists.txt  CustomThemes.qml  DoubleSpinBox.qml  IconButton.qml  MainScreen.qml  RadialGauge.qml  ResizeAnchor.qml  Tab.qml  TitleBar.qml  TopicView.qml
QDash/Main/: CMakeLists.txt  CustomThemes.qml  Main.qml  QDashApplication.cpp  QDashApplication.h  main.cpp
QDash/Native/: CMakeLists.txt  QDashApplication.cpp  QDashApplication.h  main.cpp  tmp
QDash/Native/Helpers/: CMakeLists.txt  CompileDefinitions.h  FileSelect.h  MetaObjectHelper.h  NotificationHelper.cpp  NotificationHelper.h  PlatformHelper.cpp  PlatformHelper.h
QDash/Native/Logging/: CMakeLists.txt  Logger.cpp  Logger.h
QDash/Native/Managers/: CMakeLists.txt  ConnManager.cpp  ConnManager.h  SettingsManager.cpp  SettingsManager.h
QDash/Native/Misc/: CMakeLists.txt  Constants.cpp  Constants.h  Flags.h  Globals.h  MaskedMouseArea.cpp  MaskedMouseArea.h
QDash/Native/Models/: AccentsListModel.cpp  AccentsListModel.h  CMakeLists.txt  FieldImageModel.cpp  FieldImageModel.h  GenericMapModel.cpp  GenericMapModel.h  RemoteLayoutModel.cpp  RemoteLayoutModel.h  TabListModel.cpp  TabListModel.h  TabWidgetsModel.cpp  TabWidgetsModel.h  TopicListModel.cpp  TopicListModel.h  WindowModel.cpp  WindowModel.h
QDash/Native/NT/: CMakeLists.txt  TopicStore.cpp  TopicStore.h
QDash/Native/buildconfig/: BuildConfig.cpp.in  BuildConfig.h
QDash/Native/main/: CMakeLists.txt  Globals.cpp  Globals.h  QDashApplication.cpp  QDashApplication.h
QDash/Resources/: icons.qrc
QDash/Widgets/: CMakeLists.txt  WidgetDelegate.qml.in  WidgetTypeMap.qml.in
QDash/Widgets/Base/: BaseWidget.qml  CMakeLists.txt  PrimitiveWidget.qml  ResizeComponent.qml  SendableWidget.qml  WidgetTypeMap.qml
QDash/Widgets/Misc/: CMakeLists.txt  CameraView.qml  ErrorsWidget.qml  UrlCameraView.qml  WebView.qml
QDash/Widgets/Primitive/: BoolWidget.qml  CMakeLists.txt  ColorTextWidget.qml  ColorWidget.qml  ReefDisplay.qml  ShapeHandler.qml  StringDisplay.qml  TextWidget.qml
QDash/Widgets/Sendable/: CMakeLists.txt  Command.qml  FMSInfo.qml  Field2d.qml  StringChooser.qml
QDash/Widgets/base/: BaseWidget.qml  PrimitiveWidget.qml  ResizeAnchor.qml  ResizeComponent.qml  SendableWidget.qml  ShapeHandler.qml
QDash/Widgets/bool/: BoolWidget.qml  ColorWidget.qml
QDash/Widgets/double/: DoubleDialWidget.qml  DoubleDisplay.qml  DoubleGaugeWidget.qml  DoubleProgressBar.qml  DoubleWidget.qml  MatchTime.qml
QDash/Widgets/int/: IntDialWidget.qml  IntDisplay.qml  IntWidget.qml
QDash/Widgets/misc/: CMakeLists.txt  CameraView.qml  UrlCameraView.qml  WebView.qml
QDash/Widgets/sendable/: CMakeLists.txt  Command.qml  FMSInfo.qml  Field2d.qml  StringChooser.qml
QDash/Widgets/string/: ColorTextWidget.qml  StringDisplay.qml  TextWidget.qml
QDash/resources/: fields.qrc  icons.qrc
src/native/: CMakeLists.txt  main.cpp
src/native/buildconfig/: CMakeLists.txt
src/native/helpers/: CMakeLists.txt  CompileDefinitions.h
src/native/logging/: CMakeLists.txt  Logger.cpp  Logger.h
src/native/managers/: CMakeLists.txt  ConnManager.h  SettingsManager.cpp  SettingsManager.h
src/native/misc/: CMakeLists.txt  Constants.cpp  MaskedMouseArea.h
src/native/models/: AccentsListModel.cpp  CMakeLists.txt  GenericMapModel.cpp  GenericMapModel.h  RemoteLayoutModel.cpp  TabListModel.cpp  TabListModel.h  TabWidgetsModel.cpp  TopicListModel.cpp  TopicListModel.h
src/native/nt/: CMakeLists.txt  TopicStore.h  (+1 more)
src/qml/: CMakeLists.txt
tests/: CMakeLists.txt  TestAccentsListModel.cpp  TestConnManager.cpp  TestGenericMapModel.cpp  TestSettingsManager.cpp  TestTabListModel.cpp  TestTabWidgetsModel.cpp  tst_QmlComponents.cpp  tst_Widgets.cpp
tests/quick/: tst_AcceleratedShape.qml  tst_DoubleSpinBox.qml  tst_LabeledCheckbox.qml
(+244 files in other folders)
